--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 	</head>
 	<body>
 		<header class="header">
-			<div class="logo-box">
-				<img src="./img/logo-white.png" alt="logo" class="logo" />
+			<div class="header_logo-box">
+				<img src="./img/logo-white.png" alt="logo" class="header_logo" />
 			</div>
-			<div class="text-box">
-				<h1 class="heading-primary">
-					<span class="heading-primary-main">Outdoors</span>
-					<span class="heading-primary-sub">is where life happens</span>
+			<div class="header_text-box">
+				<h1 class="heading_primary">
+					<span class="heading_primary-main">Outdoors</span>
+					<span class="heading_primary-sub">is where life happens</span>
 				</h1>
 				<a href="#" class="btn btn-white btn-animate"> Discover our tours </a>
 			</div>
