--- a/index.html
+++ b/index.html
@@ -28,5 +28,84 @@
 				<a href="#" class="btn btn-white btn-animate"> Discover our tours </a>
 			</div>
 		</header>
+		<!-- <section class="grid-section">
+			<div class="row">
+				<div class="col-1-of-2">This is col 1 of 2</div>
+				<div class="col-1-of-2">This is col 1 of 2</div>
+			</div>
+			<div class="row">
+				<div class="col-1-of-3">This is col 1 of 3</div>
+				<div class="col-1-of-3">This is col 1 of 3</div>
+				<div class="col-1-of-3">This is col 1 of 3</div>
+			</div>
+			<div class="row">
+				<div class="col-1-of-3">This is col 1 of 3</div>
+				<div class="col-2-of-3">This is col 2 of 3</div>
+			</div>
+			<div class="row">
+				<div class="col-1-of-4">This is col 1 of 4</div>
+				<div class="col-1-of-4">This is col 1 of 4</div>
+				<div class="col-1-of-4">This is col 1 of 4</div>
+				<div class="col-1-of-4">This is col 1 of 4</div>
+			</div>
+			<div class="row">
+				<div class="col-1-of-4">This is col 1 of 4</div>
+				<div class="col-1-of-4">This is col 1 of 4</div>
+				<div class="col-2-of-4">This is col 2 of 4</div>
+			</div>
+			<div class="row">
+				<div class="col-1-of-4">This is col 1 of 4</div>
+				<div class="col-3-of-4">This is col 3 of 4</div>
+			</div>
+		</section> -->
+		<main>
+			<section class="section-about">
+				<div class="u-text-center u-margin-8">
+					<h2 class="heading_secondary">Exiting tours for adventrous people</h2>
+				</div>
+				<div class="row">
+					<div class="col-1-of-2">
+						<div class="u-margin-bottom-2">
+							<h3 class="heading-tertiary">
+								You're going to love with the nature
+							</h3>
+						</div>
+						<p class="paragraph u-margin-bottom-2">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+							ipsum sapiente aspernatur libero repellat quis consequatur ducimus
+							quam nisi exercitationem omnis earum qui.
+						</p>
+						<div class="u-margin-bottom-2">
+							<h3 class="heading-tertiary">
+								Live adventures like you never have before
+							</h3>
+						</div>
+						<p class="paragraph u-margin-bottom-2">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+							ipsum sapiente aspernatur libero
+						</p>
+					</div>
+					<div class="col-1-of-2">
+						<div class="img-composition">
+							<img
+								class="composition-photo composition-photo-1"
+								src="./img/nat-1.jpg"
+								alt=""
+							/>
+							<img
+								class="composition-photo composition-photo-2"
+								src="./img/nat-2.jpg"
+								alt=""
+							/>
+							<img
+								class="composition-photo composition-photo-3"
+								src="./img/nat-3.jpg"
+								alt=""
+							/>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 	</body>
 </html>
