added tour section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 			href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
 			rel="stylesheet"
 		/>
-
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+		/>
 		<link rel="stylesheet" href="css/icon-font.css" />
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -84,6 +87,7 @@
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
 							ipsum sapiente aspernatur libero
 						</p>
+						<a href="#" class="btn2">Learn More &rarr;</a>
 					</div>
 					<div class="col-1-of-2">
 						<div class="img-composition">
@@ -104,6 +108,162 @@
 							/>
 						</div>
 					</div>
+				</div>
+			</section>
+			<section class="section-feature">
+				<div class="row">
+					<div class="col-1-of-4">
+						<div class="feature-box u-text-center">
+							<i
+								class="fa-solid fa-globe feature-box-icon u-margin-bottom-2"
+							></i>
+							<h3 class="heading-tertiary u-margin-bottom-2">
+								Explore the world
+							</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Delectus, omnis.
+							</p>
+						</div>
+					</div>
+					<div class="col-1-of-4">
+						<div class="feature-box u-text-center">
+							<i
+								class="fa-solid fa-compass feature-box-icon u-margin-bottom-2"
+							></i>
+							<h3 class="heading-tertiary u-margin-bottom-2">Meet nature</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Delectus, omnis.
+							</p>
+						</div>
+					</div>
+					<div class="col-1-of-4">
+						<div class="feature-box u-text-center">
+							<i
+								class="fa-solid fa-archway feature-box-icon u-margin-bottom-2"
+							></i>
+							<h3 class="heading-tertiary u-margin-bottom-2">Find your way</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Delectus, omnis.
+							</p>
+						</div>
+					</div>
+					<div class="col-1-of-4">
+						<div class="feature-box u-text-center">
+							<i
+								class="fa-solid fa-heart feature-box-icon u-margin-bottom-2"
+							></i>
+							<h3 class="heading-tertiary u-margin-bottom-2">
+								Live a healthier life
+							</h3>
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+								Delectus, omnis.
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="section-tour">
+				<div class="u-text-center u-margin-8">
+					<h2 class="heading_secondary">Most popular tours</h2>
+				</div>
+				<div class="row">
+					<div class="col-1-of-3">
+						<div class="card">
+							<div class="card-side card-front">
+								<div class="card-front-img card-front-img-1"></div>
+								<div class="heading-card">
+									<span class="heading-card-1">The sea explore</span>
+								</div>
+								<div class="card-details">
+									<ul>
+										<li>3 days tours</li>
+										<li>up to 30 people</li>
+										<li>2 tours guide</li>
+										<li>sleep in cozy hotels</li>
+										<li>difficulty:easy</li>
+									</ul>
+								</div>
+							</div>
+							<div class="card-side card-back card-back-1">
+								<div class="cta">
+									<div class="card-price">
+										<span class="card-price-only">only</span>
+										<span class="card-price-value">$297</span>
+									</div>
+									<div class="book-now">
+										<a href="#" class="btn btn-white"> Book now </a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-1-of-3">
+						<div class="card">
+							<div class="card-side card-front">
+								<div class="card-front-img card-front-img-2"></div>
+								<div class="heading-card">
+									<span class="heading-card-2">The forest hiker</span>
+								</div>
+								<div class="card-details">
+									<ul>
+										<li>7 days tours</li>
+										<li>up to 40 people</li>
+										<li>6 tours guide</li>
+										<li>sleep in provided tenst</li>
+										<li>difficulty:medium</li>
+									</ul>
+								</div>
+							</div>
+							<div class="card-side card-back card-back-2">
+								<div class="cta">
+									<div class="card-price">
+										<span class="card-price-only">only</span>
+										<span class="card-price-value">$497</span>
+									</div>
+									<div class="book-now">
+										<a href="#" class="btn btn-white"> Book now </a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-1-of-3">
+						<div class="card">
+							<div class="card-side card-front">
+								<div class="card-front-img card-front-img-3"></div>
+								<div class="heading-card">
+									<span class="heading-card-3">The snow adventure</span>
+								</div>
+								<div class="card-details">
+									<ul>
+										<li>5 days tours</li>
+										<li>up to 15 people</li>
+										<li>3 tours guide</li>
+										<li>sleep in provided tents</li>
+										<li>difficulty:hard</li>
+									</ul>
+								</div>
+							</div>
+							<div class="card-side card-back card-back-3">
+								<div class="cta">
+									<div class="card-price">
+										<span class="card-price-only">only</span>
+										<span class="card-price-value">$897</span>
+									</div>
+									<div class="book-now">
+										<a href="#" class="btn btn-white"> Book now </a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="tour-btn u-text-center">
+					<a href="#" class="btn btn-green"> Discover all tours </a>
 				</div>
 			</section>
 		</main>
