added stories section

--- a/index.html
+++ b/index.html
@@ -266,6 +266,57 @@
 					<a href="#" class="btn btn-green"> Discover all tours </a>
 				</div>
 			</section>
+			<section class="section-stories">
+				<div class="bg-video">
+					<video class="bg-video-content" autoplay muted loop>
+						<source src="./img/video.mp4" type="video/mp4" />
+						<source src="./img/video.webm" type="video/webm" />
+						This browser isn't support background video
+					</video>
+				</div>
+				<div class="u-text-center u-margin-8">
+					<h2 class="heading_secondary">We make people genuinely happy</h2>
+				</div>
+				<div class="story u-margin-8">
+					<figure class="figure">
+						<img src="./img/nat-8.jpg" alt="" class="figure-img" />
+						<figcaption class="figure-caption">Miley Cyrus</figcaption>
+					</figure>
+					<div class="story-text">
+						<h3 class="heading-tertiary u-margin-bottom-2">
+							I HAD THE BEST WEEK EVER WITH MY FAMILY
+						</h3>
+						<p class="story-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+							ipsum sapiente aspernatur libero repellat quis consequatur ducimus
+							quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente
+							aspernatur libero repellat quis consequatur ducimus quam nisi
+							exercitationem omnis earum qui.
+						</p>
+					</div>
+				</div>
+				<div class="story u-margin-8">
+					<figure class="figure">
+						<img src="./img/nat-9.jpg" alt="" class="figure-img" />
+						<figcaption class="figure-caption">David lee</figcaption>
+					</figure>
+					<div class="story-text">
+						<h3 class="heading-tertiary u-margin-bottom-2">
+							wow!my life is completely different now
+						</h3>
+						<p class="story-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+							ipsum sapiente aspernatur libero repellat quis consequatur ducimus
+							quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente
+							aspernatur libero repellat quis consequatur ducimus quam nisi
+							exercitationem omnis earum qui.
+						</p>
+					</div>
+				</div>
+				<div class="stories-btn u-text-center">
+					<a href="#" class="btn2">Read all stories &rarr;</a>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
