added booking section

--- a/index.html
+++ b/index.html
@@ -317,6 +317,68 @@
 					<a href="#" class="btn2">Read all stories &rarr;</a>
 				</div>
 			</section>
+			<section class="section-book">
+				<div class="row">
+					<div class="book">
+						<div class="form">
+							<div class="u-margin-bottom-4">
+								<h2 class="heading_secondary">start booking now</h2>
+							</div>
+							<div class="form-group">
+								<input
+									type="text"
+									class="form-input"
+									id="name"
+									placeholder="Full Name"
+									required
+								/>
+								<label for="name" class="form-label">Full Name</label>
+							</div>
+							<div class="form-group">
+								<input
+									type="email"
+									class="form-input"
+									id="email"
+									placeholder="Email Address"
+									required
+								/>
+								<label for="email" class="form-label">Email Address</label>
+							</div>
+							<div class="form-group">
+								<div class="radio-group">
+									<input
+										type="radio"
+										name="radio-btn"
+										id="small"
+										class="radio"
+									/>
+									<label for="small" class="radio-label">
+										<div class="radio-btn"></div>
+										small tour group</label
+									>
+								</div>
+								<div class="radio-group">
+									<input
+										type="radio"
+										name="radio-btn"
+										id="large"
+										class="radio"
+									/>
+									<label for="large" class="radio-label">
+										<div class="radio-btn"></div>
+										large tour group</label
+									>
+								</div>
+							</div>
+							<div class="form-group">
+								<button class="btn btn-green" type="submit">
+									Next step &rarr;
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
