--- a/index.html
+++ b/index.html
@@ -380,5 +380,30 @@
 				</div>
 			</section>
 		</main>
+		<footer class="footer">
+			<div class="footer-logo u-margin-8">
+				<img src="./img/logo-green-2x.png" alt="" />
+			</div>
+			<div class="row">
+				<div class="col-1-of-2">
+					<div class="footer-nav">
+						<ul>
+							<li><a href="#">Company</a></li>
+							<li><a href="">Contact us</a></li>
+							<li><a href="">Carrer</a></li>
+							<li><a href="">Privacy Policy</a></li>
+							<li><a href="">Terms</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-1-of-2">
+					<div class="copy-right">
+						This is the project from Advanced css and sass course by jonas
+						schmedtmann. From his permission , i take this project for my
+						portfolio.In this project , HTML and CSS(Sass) were used.
+					</div>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
