--- a/index.html
+++ b/index.html
@@ -19,6 +19,36 @@
 		<title>Natours | Exciting tours for adventurous people</title>
 	</head>
 	<body>
+		<div class="navbar">
+			<input type="checkbox" id="checkbox" class="checkbox" />
+
+			<div class="navbar-back"></div>
+			<div class="navbar-top">
+				<label for="checkbox">check</label>
+				<div class="navbar-top-line-top"></div>
+				<div class="navbar-top-line-medium"></div>
+				<div class="navbar-top-line-bottom"></div>
+			</div>
+			<div class="navbars">
+				<ul class="nav-bars">
+					<li>
+						<a href="#"> <span>01</span> About Natous</a>
+					</li>
+					<li>
+						<a href="#"><span>02</span> Your Benefits</a>
+					</li>
+					<li>
+						<a href="#"> <span>03</span> Popular tours</a>
+					</li>
+					<li>
+						<a href="#"> <span>04</span> Stories</a>
+					</li>
+					<li>
+						<a href="#"> <span>05</span> Book now</a>
+					</li>
+				</ul>
+			</div>
+		</div>
 		<header class="header">
 			<div class="header_logo-box">
 				<img src="./img/logo-white.png" alt="logo" class="header_logo" />
@@ -399,8 +429,8 @@
 				<div class="col-1-of-2">
 					<div class="copy-right">
 						This is the project from Advanced css and sass course by jonas
-						schmedtmann. From his permission , i take this project for my
-						portfolio.In this project , HTML and CSS(Sass) were used.
+						schmedtmann. From his permission , I take this project for my
+						portfolio.In this project , HTML and CSS(Sass) only were used.
 					</div>
 				</div>
 			</div>
