added popup for book now

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="section-tour">
+			<section class="section-tour" id="tour">
 				<div class="u-text-center u-margin-8">
 					<h2 class="heading_secondary">Most popular tours</h2>
 				</div>
@@ -225,7 +225,7 @@
 										<span class="card-price-value">$297</span>
 									</div>
 									<div class="book-now">
-										<a href="#" class="btn btn-white"> Book now </a>
+										<a href="#book" class="btn btn-white"> Book now </a>
 									</div>
 								</div>
 							</div>
@@ -255,7 +255,7 @@
 										<span class="card-price-value">$497</span>
 									</div>
 									<div class="book-now">
-										<a href="#" class="btn btn-white"> Book now </a>
+										<a href="#book" class="btn btn-white"> Book now </a>
 									</div>
 								</div>
 							</div>
@@ -285,7 +285,7 @@
 										<span class="card-price-value">$897</span>
 									</div>
 									<div class="book-now">
-										<a href="#" class="btn btn-white"> Book now </a>
+										<a href="#book" class="btn btn-white"> Book now </a>
 									</div>
 								</div>
 							</div>
@@ -435,5 +435,31 @@
 				</div>
 			</div>
 		</footer>
+		<div class="popup" id="book">
+			<div class="popup-main">
+				<a href="#tour"><i class="fa-solid fa-xmark close-btn"></i></a>
+				<div class="popup-main-imgs">
+					<img src="./img/nat-8.jpg" alt="" />
+					<img src="./img/nat-9.jpg" alt="" />
+				</div>
+				<div class="terms">
+					<div class="u-margin-bottom-2">
+						<h2 class="heading_secondary">Start booking now</h2>
+					</div>
+					<p class="terms-para u-margin-bottom-2">
+						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia
+						ullam quam dolores facilis assumenda, reiciendis autem nam inventore
+						provident. Cum quibusdam corrupti deserunt inventore excepturi rem
+						ex quidem ad recusandae modi molestiae, sapiente deleniti eos eius
+						provident at labore reiciendis, et voluptatum sed nihil. Velit
+						impedit aperiam esse ea voluptatibus suscipit, corporis voluptate
+						voluptatum corrupti, consectetur sint, ipsa laborum autem. Ab
+						aliquam sit soluta minima ipsa quos sint deleniti numquam magni
+						beatae libero sunt cum nostrum quibusdam veniam, vel enim.
+					</p>
+					<a href="#tour" class="btn btn-green">Book Now</a>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
